# asset-allocation-TC

./: README.md  pyproject.toml
configs/: README.md
data/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: 00_project_overview.md  01_architecture.md  02_roadmap.md  README.md  diagnostics_guide.md  notebook_plan.md  user_guide.md
docs/adr/: ADR-001-specs-as-dataclasses.md  ADR-002-layered-architecture.md  ADR-003-standardized-student-t.md  ADR-004-standardized-skew-normal.md  ADR-005-nonlinear-redundancy-groups.md  ADR-006-near-duplicates-as-blocks.md
docs/development/: contributing.md  setup.md  testing.md
docs/modules/: marginals.md  specs.md  structures.md  utils.md
experiments/: README.md
notebooks/: README.md  tc_synthetic_full_demo.ipynb
paper/: README.md
paper/drafts/: README.md
paper/figures/: README.md
paper/references/: README.md
results/: README.md
results/figures/: README.md
results/logs/: README.md
results/tables/: README.md
scripts/: README.md
src/tc_synthetic/: __init__.py  (+13 more)
tests/: test_copulas.py  test_copulas_functional.py  test_diagnostics.py  test_generator.py  test_generator_dynamic_functional.py  test_generator_static_functional.py  test_information.py  test_information_gaussian.py  test_marginals.py  test_marginals_functional.py  test_module_imports.py  test_plots.py  test_scenarios.py  test_smoke.py  test_special_generators.py  test_special_generators_functional.py  test_specs.py  test_states.py  test_states_functional.py  test_structures.py  test_structures_functional.py  test_utils.py
(+1 files in other folders)
