[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocation-tc"
version = "0.1.0"
description = "Base project scaffold for a Python application."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Project Team" }
]
dependencies = []

[project.scripts]
asset-allocation-tc = "asset_allocation_tc.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
